<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/home_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="12dp"
                    android:text=""
                    android:textColor="@color/text_ff383838"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/home_tab_offline" />

                <ImageView
                    android:id="@+id/home_title_icon"
                    android:layout_width="84dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="15dp"
                    android:src="@mipmap/text_app_name"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="84.5dp"
                    android:layout_height="31dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_wx_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <!-- page -->
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/home_vp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/home_tab"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:background="@color/white"
                android:elevation="@dimen/common_elevation"
                android:orientation="horizontal">

                <!-- 线下 -->
                <LinearLayout
                    android:id="@+id/home_tab_offline"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/home_tab_online">

                    <ImageView
                        android:id="@+id/home_tab_offline_icon"
                        android:layout_width="@dimen/home_tab_size"
                        android:layout_height="@dimen/home_tab_size"
                        android:src="@mipmap/ic_home_tab_offline_sel" />

                    <TextView
                        android:id="@+id/home_tab_offline_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_tab_offline"
                        android:textColor="@color/home_tab_text_sel"
                        android:textSize="@dimen/home_tab_text" />

                </LinearLayout>

                <!-- 线上 -->
                <LinearLayout
                    android:id="@+id/home_tab_online"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintLeft_toRightOf="@id/home_tab_offline"
                    app:layout_constraintRight_toLeftOf="@id/home_tab_todo">

                    <ImageView
                        android:id="@+id/home_tab_online_icon"
                        android:layout_width="@dimen/home_tab_size"
                        android:layout_height="@dimen/home_tab_size"
                        android:src="@mipmap/ic_home_tab_online" />

                    <TextView
                        android:id="@+id/home_tab_online_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_tab_online"
                        android:textColor="@color/home_tab_text"
                        android:textSize="@dimen/home_tab_text" />
                </LinearLayout>

                <!-- 待参加 -->
                <LinearLayout
                    android:id="@+id/home_tab_todo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintLeft_toRightOf="@id/home_tab_online"
                    app:layout_constraintRight_toLeftOf="@id/home_tab_mine">

                    <ImageView
                        android:id="@+id/home_tab_todo_icon"
                        android:layout_width="@dimen/home_tab_size"
                        android:layout_height="@dimen/home_tab_size"
                        android:src="@mipmap/ic_home_tab_todo" />

                    <TextView
                        android:id="@+id/home_tab_todo_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_tab_todo"
                        android:textColor="@color/home_tab_text"
                        android:textSize="@dimen/home_tab_text" />
                </LinearLayout>

                <!-- 我的 -->
                <LinearLayout
                    android:id="@+id/home_tab_mine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/home_tab_mine_icon"
                        android:layout_width="@dimen/home_tab_size"
                        android:layout_height="@dimen/home_tab_size"
                        android:src="@mipmap/ic_home_tab_mine" />

                    <TextView
                        android:id="@+id/home_tab_mine_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_tab_mine"
                        android:textColor="@color/home_tab_text"
                        android:textSize="@dimen/home_tab_text" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</FrameLayout>